k8s-getting-started/simple-externalname-service.yml
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  type: ExternalName
  externalName: gihyo.jp
